src/test/resources/negative/VoidBinding.java
import net.nokok.draft.Module;

@Module
interface VoidBinding {
    void bind();
}